--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.10.0",
-    "bootstrap": "^5.3.7",
-    "font-awesome": "^4.7.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "axios": "^1.10.0",
+  "bootstrap": "^5.3.7",
+  "@fortawesome/fontawesome-free": "^6.5.1",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-hot-toast": "^2.5.2",
+  "react-router-dom": "^7.6.3",
+  "react-scripts": "5.0.1",
+  "web-vitals": "^2.1.4",
+  "@testing-library/react": "^13.4.0",
+  "@testing-library/jest-dom": "^5.16.5",
+  "@testing-library/user-event": "^14.4.3"
+}
+,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
